@@ -1,3 +1,11 @@
+2023-12-18  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* pickles/jojodiff.pk: New pickle for JojoDiff utility.
+	* pickles/Makefile.am (dist_pickles_DATA): Add `jojodiff.pk'.
+	* utils/pk-jojopatch.in: New Poke script to apply JojoDiff patches
+	to files.
+	* utils/Makefile.am (pk-jojopatch): Add rule for `pk-jojopatch'.
+
 2023-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_ast_print): Change `fprintf' with `fputs'.
